# echo-rs

./: Cargo.toml  README.md
.github/workflows/: echo-rs-ci.yml
gnu_echo_tests/: test.py
src/: consts.rs  main.rs
